US-002 & US-003 : Spark Foundation and Configuration
* Create package structure for retail lakehouse

* Add application configuration and logging

* Implement ConfigLoader utility

* Implement centralized SparkSessionFactory

* Added dataset source and filenames

* Add Java 17 compatibility and unit tests for Spark foundation